-- =====================================================
-- LIBRO DIGITAL — attendanceService (esquema normalizado 3FN)
-- Base de datos: librodigital_attendance
-- Puerto del servicio: 8093
-- Fecha: 2026-06-20
-- =====================================================
-- course_id, subject_id, teacher_id, student_id son referencias
-- lógicas al academicService (sin FK entre bases).
-- =====================================================

-- -----------------------------------------------------
-- CATÁLOGOS
-- -----------------------------------------------------

CREATE TABLE IF NOT EXISTS session_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS attendance_statuses (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

CREATE TABLE IF NOT EXISTS annotation_types (
    id    SMALLINT PRIMARY KEY,
    code  VARCHAR(30)  NOT NULL UNIQUE,
    label VARCHAR(100) NOT NULL
);

INSERT INTO session_statuses (id, code, label) VALUES
    (1, 'ABIERTA', 'Abierta'), (2, 'CERRADA', 'Cerrada')
ON CONFLICT (id) DO NOTHING;

INSERT INTO attendance_statuses (id, code, label) VALUES
    (1, 'PRESENTE', 'Presente'), (2, 'AUSENTE', 'Ausente'),
    (3, 'ATRASADO', 'Atrasado'), (4, 'JUSTIFICADO', 'Justificado')
ON CONFLICT (id) DO NOTHING;

INSERT INTO annotation_types (id, code, label) VALUES
    (1, 'POSITIVA', 'Positiva'), (2, 'NEGATIVA', 'Negativa')
ON CONFLICT (id) DO NOTHING;

-- -----------------------------------------------------
-- ENTIDADES
-- -----------------------------------------------------

CREATE TABLE IF NOT EXISTS class_sessions (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    course_id         BIGINT   NOT NULL,
    subject_id        BIGINT   NOT NULL,
    teacher_id        BIGINT   NOT NULL,
    session_date      DATE     NOT NULL,
    topic             VARCHAR(255),
    session_status_id SMALLINT NOT NULL DEFAULT 1,
    created_at        TIMESTAMP,
    updated_at        TIMESTAMP
);

CREATE TABLE IF NOT EXISTS attendance_records (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id           BIGINT   NOT NULL,
    student_id           BIGINT   NOT NULL,
    attendance_status_id SMALLINT NOT NULL DEFAULT 1,
    observations         VARCHAR(255),
    created_at           TIMESTAMP,
    updated_at           TIMESTAMP,
    CONSTRAINT uk_attendance_session_student UNIQUE (session_id, student_id)
);

CREATE TABLE IF NOT EXISTS annotations (
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id         BIGINT   NOT NULL,
    teacher_id         BIGINT   NOT NULL,
    annotation_date    DATE     NOT NULL,
    annotation_type_id SMALLINT NOT NULL DEFAULT 1,
    description        VARCHAR(255),
    created_at         TIMESTAMP,
    updated_at         TIMESTAMP
);

-- -----------------------------------------------------
-- CLAVES FORÁNEAS (dentro de la misma base)
-- -----------------------------------------------------

ALTER TABLE class_sessions DROP CONSTRAINT IF EXISTS fk_sessions_status;
ALTER TABLE class_sessions ADD CONSTRAINT fk_sessions_status
    FOREIGN KEY (session_status_id) REFERENCES session_statuses(id);

ALTER TABLE attendance_records DROP CONSTRAINT IF EXISTS fk_attendance_session;
ALTER TABLE attendance_records ADD CONSTRAINT fk_attendance_session
    FOREIGN KEY (session_id) REFERENCES class_sessions(id);

ALTER TABLE attendance_records DROP CONSTRAINT IF EXISTS fk_attendance_status;
ALTER TABLE attendance_records ADD CONSTRAINT fk_attendance_status
    FOREIGN KEY (attendance_status_id) REFERENCES attendance_statuses(id);

ALTER TABLE annotations DROP CONSTRAINT IF EXISTS fk_annotations_type;
ALTER TABLE annotations ADD CONSTRAINT fk_annotations_type
    FOREIGN KEY (annotation_type_id) REFERENCES annotation_types(id);

-- -----------------------------------------------------
-- DATOS DEMO (IDs 1 = primer registro en academic_schema demo)
-- -----------------------------------------------------

INSERT INTO class_sessions (course_id, subject_id, teacher_id, session_date, topic, session_status_id, created_at, updated_at)
SELECT 1, 1, 1, CURRENT_DATE, 'Ecuaciones lineales', 1, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (
    SELECT 1 FROM class_sessions
    WHERE course_id = 1 AND subject_id = 1 AND session_date = CURRENT_DATE
);

INSERT INTO attendance_records (session_id, student_id, attendance_status_id, created_at, updated_at)
SELECT cs.id, 1, 1, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
FROM class_sessions cs
WHERE cs.course_id = 1 AND cs.subject_id = 1 AND cs.session_date = CURRENT_DATE
  AND NOT EXISTS (
      SELECT 1 FROM attendance_records ar
      WHERE ar.session_id = cs.id AND ar.student_id = 1
  );

INSERT INTO annotations (student_id, teacher_id, annotation_date, annotation_type_id, description, created_at, updated_at)
SELECT 1, 1, CURRENT_DATE, 1, 'Participación activa en clase', CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
WHERE NOT EXISTS (
    SELECT 1 FROM annotations
    WHERE student_id = 1 AND teacher_id = 1 AND annotation_date = CURRENT_DATE AND annotation_type_id = 1
);
